--- a/수빈.html
+++ b/수빈.html
@@ -14,13 +14,13 @@
 <body>
     <!-- 로고 부분 만들기 -->
     <div id="mentos">
-        <a href="main.html"><img src="수빈 타이틀.png" alt="멘토스" /></a>
+        <a href="main.html"><img src="img/수빈 타이틀.png" alt="멘토스" /></a>
     </div>
 
     <div class="layout">
         <aside>
             <div class="menu">
-                <img src="수빈.jpg">
+                <img src="img/수빈.jpg">
             </div>
             <div class="name">
                 <h1>김수빈[2133057]</h1>
@@ -31,16 +31,16 @@
             </div>
             <div class="index1">
                 <ul>
-                    <img src="복숭아.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
+                    <img src="img/복숭아.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
                     <a href="수임.html"><span style="margin-top: -20px; font-size:23px;">김수임</span></a>
                     <br><br>
-                    <img src="딸기.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
+                    <img src="img/딸기.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
                     <a href="수빈.html"><span style="margin-top: -20px; font-size:23px;">김수빈</span></a>
                     <br><br>
-                    <img src="아보카도.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
+                    <img src="img/아보카도.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
                     <a href="은주.html"><span style="margin-top: -20px; font-size:23px;">한은주</span></a>
                     <br><br>
-                    <img src="포도.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
+                    <img src="img/포도.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
                     <a href="태성.html"><span style="margin-top: -20px; font-size:23px;">황태성</span></a>
                 </ul>
             </div>
