--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
 <body>
     <!-- 로고 부분 만들기 -->
     <div id="mentos">
-        <img src="멘토스 타이틀.png" alt="멘토스" />
+        <img src="img/멘토스 타이틀.png" alt="멘토스" />
     </div>
 
     <div class="layout">
         <aside>
             <div class="menu">
-                <img src="멘토스.png">
+                <img src="img/멘토스.png">
             </div>
             <div class="name">
                 <h1>멘토스[컴소과]</h1>
@@ -30,17 +30,17 @@
             </div>
             <div class="index1">
                 <ul>
-                    <img src="복숭아.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;" >
-                    <a href="수임.html" ><span style="margin-top: -20px; font-size:23px;" >김수임</span></a>
+                    <img src="img/복숭아.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
+                    <a href="수임.html"><span style="margin-top: -20px; font-size:23px;">김수임</span></a>
                     <br><br>
-                    <img src="딸기.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;" >
-                    <a href="수빈.html"><span style="margin-top: -20px; font-size:23px;" >김수빈</span></a>
+                    <img src="img/딸기.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
+                    <a href="수빈.html"><span style="margin-top: -20px; font-size:23px;">김수빈</span></a>
                     <br><br>
-                    <img src="아보카도.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;" >
-                    <a href="은주.html"><span style="margin-top: -20px; font-size:23px;" >한은주</span></a>
+                    <img src="img/아보카도.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
+                    <a href="은주.html"><span style="margin-top: -20px; font-size:23px;">한은주</span></a>
                     <br><br>
-                    <img src="포도.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;" >
-                    <a href="태성.html"><span style="margin-top: -20px; font-size:23px;" >황태성</span></a>
+                    <img src="img/포도.png" style="margin-top: -13px; vertical-align:middle; width:25px; height:25px;">
+                    <a href="태성.html"><span style="margin-top: -20px; font-size:23px;">황태성</span></a>
                 </ul>
             </div>
             <hr width="180px" color="#fff7dc">
@@ -53,7 +53,7 @@
                 <div class="item">
                     <dr class="history">멘토스 짧디짧은 역사</dr>
                     <hr>
-                    <img src="연대기.png" width="800px" height="500px">
+                    <img src="img/연대기.png" width="800px" height="500px">
                 </div>
             </div>
         </article>
